<resources>
    <string name="action_yes_delete">Yes delete</string>
    <string name="add_playlist">Add Playlsit</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="adding_to_playlist">Adding to playlist, please wait</string>
    <string name="albums">Albums</string>
    <string name="app_name">Chords</string>
    <string name="artists">Artists</string>
    <string name="cancel">Cancel</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="current_playlist">Current Playlist</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting…</string>
    <string name="desc_artist">image of artist</string>
    <string name="desc_current_playlist">Current playlist button</string>
    <string name="desc_override">The song downloaded is not the correct song? Overriding will allow you to download a song and replace the current song.</string>
    <string name="desc_play_pause">Play and pause button</string>
    <string name="downloads">Downloads</string>
    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="error_delete_album">Failed to delete album.</string>
    <string name="error_delete_artist">Failed to delete artist.</string>
    <string name="error_delete_playlist">Failed to delete playlist.</string>
    <string name="error_delete_song">Failed to delete song.</string>
    <string name="error_permission_reject">The app cannot function without the requested permissions.</string>
    <string name="error_playlist_name_required">Playlist name required</string>
    <string name="error_search_input_required">Search input required</string>
    <string name="error_search_music">Failed to get music results.</string>
    <string name="error_url">Failed to get the url of the song.</string>
    <string name="library">Library</string>
    <string name="msg_song_s_added_to_queue">Song(s) added to queue.</string>
    <string name="Music">Music</string>
    <string name="not_correct_song">Not correct song?</string>
    <string name="okay">Okay</string>
    <string name="override">Override</string>
    <string name="play">Play</string>
    <string name="playing_now">Playing Now</string>
    <string name="playlist">Playlists</string>
    <string name="playlist_songs">Playlist songs</string>
    <string name="request_again">Request Again</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="search_artist_song">Search artist, song name</string>
    <string name="search_song_album_artist_name">Search Song, artist or album name</string>
    <string name="select_songs">Select songs</string>
    <string name="songs">Songs</string>
    <string name="trans_album_name">TransAlbumName</string>
    <string name="trans_album_pic">TranArtistPic</string>
    <string name="trans_artist_name">TransArtistName</string>
    <string name="trans_artist_pic">TransArtistPic</string>
    <string name="trans_play_pause">TransPlayPause</string>
    <string name="trans_playlist_name">trans playlist name</string>
    <string name="trans_playlist_pic">trans playlist</string>
    <string name="trans_seekbar">TransSeekbar</string>
    <string name="trans_song_name">TransSongName</string>
    <string name="txt_continue">Continue</string>
    <string name="update">Update</string>
    <string name="warning_delete_album">Are you sure you want to delete the album %1$s? This will delete every song in this album</string>
    <string name="warning_delete_artist">Are you sure you want to delete the artist %1$s? This will delete every song and album of the artist</string>
    <string name="warning_delete_playlist">Are you sure you want to delete the playlist %1$s? This will only delete the playlist, it will not delete the songs.</string>
    <string name="warning_delete_song">Are you sure you want to delete the song %1$s?</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="answer">Answer</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>
    <string name="action_pause">Pause</string>
    <string name="action_close">Close</string>
    <string name="desc_song_info">View current song info</string>
    <string name="info">Info</string>
    <string name="lyrics">Lyrics</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="featured_artists">Featured Artist(s)</string>
    <string name="producers">Producer(s)</string>
    <string name="artist">Artist</string>
    <string name="fetching_lyrics">Fetching lyrics, please wait…</string>
    <string name="error_lyrics">An error occurred while fetching lyrics.</string>
    <string name="try_again">Try Again</string>
    <string name="alternate_names">Alternate Name(s)</string>
    <string name="not_correct_song_info">Not correct song info?</string>
    <string name="select_correct_song_info">Select correct song info below</string>

    <string-array name="badWords">
        <item>anal</item>
        <item>ass</item>
        <item>bbw</item>
        <item>bitch</item>
        <item>butt</item>
        <item>clit</item>
        <item>cock</item>
        <item>fuck</item>
        <item>juicy</item>
        <item>milf</item>
        <item>penis</item>
        <item>pussy</item>
        <item>sex</item>
        <item>suck</item>
        <item>vagina</item>
        <item>naked</item>
    </string-array>

</resources>